test/force-app/main/default/objects/Contact/fields/ADRES_ID__c.field-meta.xml
<CustomField>
    <fullName>ADRES_ID__c</fullName>
    <label>ADRES_ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>