test/force-app/main/default/objects/Contact/fields/ADRES_ID_entete_c__c.field-meta.xml
<CustomField>
    <fullName>ADRES_ID_entete_c__c</fullName>
    <label>ADRES_ID_entete__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mo</fullName>
                <label>Monsieur</label>
            </value>
            <value>
                <fullName>ma</fullName>
                <label>Madame</label>
            </value>
            <value>
                <fullName>fa</fullName>
                <label>Famille</label>
            </value>
            <value>
                <fullName>men</fullName>
                <label>Menuiserie</label>
            </value>
            <value>
                <fullName>mm</fullName>
                <label>Madame et Monsieur</label>
            </value>
            <value>
                <fullName>eb</fullName>
                <label>Ebénisterie</label>
            </value>
            <value>
                <fullName>mes</fullName>
                <label>Messieurs</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>Entreprise</label>
            </value>
            <value>
                <fullName>aarchi</fullName>
                <label>Atelier d&apos;architecture</label>
            </value>
            <value>
                <fullName>déco</fullName>
                <label>Décoration d&apos;intérieur</label>
            </value>
            <value>
                <fullName>café</fullName>
                <label>Café, restaurant</label>
            </value>
            <value>
                <fullName>burt</fullName>
                <label>Bureau technique</label>
            </value>
            <value>
                <fullName>mm2</fullName>
                <label>Monsieur et Madame</label>
            </value>
            <value>
                <fullName>hot</fullName>
                <label>Hôtel</label>
            </value>
            <value>
                <fullName>rest</fullName>
                <label>Restaurant</label>
            </value>
            <value>
                <fullName>buet</fullName>
                <label>Bureau d&apos;études</label>
            </value>
            <value>
                <fullName>burint</fullName>
                <label>Architecture d&apos;intérieur</label>
            </value>
            <value>
                <fullName>bout</fullName>
                <label>Boutique</label>
            </value>
            <value>
                <fullName>agenc</fullName>
                <label>Agencements</label>
            </value>
            <value>
                <fullName>ing</fullName>
                <label>Bureau d&apos;ingénieur</label>
            </value>
            <value>
                <fullName>fidu</fullName>
                <label>Fiduciaire</label>
            </value>
            <value>
                <fullName>fon</fullName>
                <label>Fondation</label>
            </value>
            <value>
                <fullName>const</fullName>
                <label>Construction métallique</label>
            </value>
            <value>
                <fullName>danc</fullName>
                <label>Dancing nightclub</label>
            </value>
            <value>
                <fullName>bijou</fullName>
                <label>Bijouterie</label>
            </value>
            <value>
                <fullName>ins</fullName>
                <label>Installations sanitaires</label>
            </value>
            <value>
                <fullName>doc</fullName>
                <label>Docteur</label>
            </value>
            <value>
                <fullName>boul</fullName>
                <label>Boulangerie</label>
            </value>
            <value>
                <fullName>insti</fullName>
                <label>Institut de beauté</label>
            </value>
            <value>
                <fullName>at</fullName>
                <label>Atelier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>