test/force-app/main/default/objects/Contact/fields/Lettre_Ent_te__c.field-meta.xml
<CustomField>
    <fullName>Lettre_Ent_te__c</fullName>
    <label>Lettre Entête</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>