test/force-app/main/default/objects/Contact/fields/Mobile_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_2__c</fullName>
    <label>Téléphone</label>
    <type>Phone</type>
</CustomField>