test/force-app/main/default/objects/Contact/fields/Telephone_3__c.field-meta.xml
<CustomField>
    <fullName>Telephone_3__c</fullName>
    <label>Téléphone direct</label>
    <type>Phone</type>
</CustomField>