test/force-app/main/default/objects/Contact/fields/Utilisateur_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur_Salesforce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ technique. Lien vers le User Salesforce correspondant à ce Contact (collaborateur interne). Rempli automatiquement par matching sur l&apos;email - ne pas afficher sur les pages ni modifier manuellement. Utilisé par le Flow d&apos;attribution automatique des tâches (OwnerId).</description>
    <label>Utilisateur Salesforce (technique)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact_Interne</relationshipName>
    <type>Lookup</type>
</CustomField>