test/force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Identification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Tous les contacts</label>
</ListView>